<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/menu_slot" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_notify"
                android:icon="@drawable/ic_notifications_active_black_24dp"
                android:title="@string/menu_notify" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_team"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/menu_team" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
